--- a/samples/sample5_x_Melos.html
+++ b/samples/sample5_x_Melos.html
@@ -212,8 +212,10 @@
         ><rb>橋桁</rb><rp>（</rp><rt>はしげた</rt><rp>）</rp></ruby
       >を跳ね飛ばしていた。彼は茫然と、立ちすくんだ。あちこちと眺めまわし、また、声を限りに呼びたててみたが、<ruby><rb>繋舟</rb><rp>（</rp><rt>けいしゅう</rt><rp>）</rp></ruby>は残らず浪に<ruby
         ><rb>浚</rb><rp>（</rp><rt>さら</rt><rp>）</rp></ruby
-      >われて影なく、渡守りの姿も見えない。流れはいよいよ、ふくれ上り、海のようになっている。メロスは川岸にうずくまり、男泣きに泣きながらゼウスに手を挙げて哀願した。「ああ、<ruby
-        ><rb>鎮</rb><rp>（</rp><rt>しず</rt><rp>）</rp></ruby
+      >われて影なく、渡守りの姿も見えない。流れはいよいよ、ふくれ上り、海のようになっている。メロスは川岸にうずくまり、男泣きに泣きながらゼウスに手を挙げて哀願した。
+    </p>
+    <p class="serif melos aseri">
+      「ああ、<ruby><rb>鎮</rb><rp>（</rp><rt>しず</rt><rp>）</rp></ruby
       >めたまえ、荒れ狂う流れを！時は刻々に過ぎて行きます。太陽も既に真昼時です。あれが沈んでしまわぬうちに、王城に行き着くことが出来なかったら、あの佳い友達が、私のために死ぬのです。<span
         class="hidden-paren"
         >」</span
